# reactos

base/applications/cacls/lang/: zh-CN.rc
base/applications/calc/lang/: zh-CN.rc
base/applications/dxdiag/lang/: zh-CN.rc
base/applications/fltmc/lang/: zh-CN.rc
base/applications/fontview/lang/: zh-CN.rc
base/applications/msconfig_new/lang/: zh-CN.rc
base/applications/notepad/lang/: zh-CN.rc
base/applications/rapps/: CMakeLists.txt  applicationdb.cpp  applicationinfo.cpp  appview.cpp  available.cpp  gui.cpp  installed.cpp  installed.cpp.txt  loaddlg.cpp  misc.cpp  unattended.cpp  winmain.cpp
base/applications/rapps/include/: applicationdb.h  applicationinfo.h  appview.h  available.h.txt  defines.h  dialogs.h  gui.h  installed.h  installed.h.txt  rapps.h  rosui.h
base/applications/regedit/lang/: zh-CN.rc
base/applications/sndvol32/lang/: zh-CN.rc
boot/bootdata/: hivesys.inf  txtsetup.sif
dll/shellext/sendmail/: sendmail.rc
drivers/storage/ide/: CMakeLists.txt
drivers/storage/port/: CMakeLists.txt
drivers/storage/port/nvme/: CMakeLists.txt  StorPortPatch.h  nvmeInit.c  nvmeIo.c  nvmeSnti.c  nvmeSnti.h  nvmeStat.c  nvmeStd.c  nvmeStd.h  nvmeWmi.c  nvmeWmi.h  nvme_tracing.h  precomp.h
hal/halx86/apic/: halinit.c
hal/halx86/generic/: dma.c  halinit.c
media/inf/: hdc.inf
ntoskrnl/: ntos.cmake
ntoskrnl/config/: cmsysini.c
ntoskrnl/include/internal/: io.h
ntoskrnl/io/iomgr/: crashdump.c  iomgr.c
ntoskrnl/kd64/: kdapi.c
ntoskrnl/mm/ARM3/: mdlsup.c  miarm.h  mminit.c  sysldr.c
sdk/include/ddk/: scsiwmi.h  storport.h
(+82 files in other folders)
